--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <p>This is my first Git project</p>
     <h1>Am here now what about yourself</h1>
+    <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px">coco</div>
 </body>
 </html>
